--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:15.0.1"
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
@@ -34,6 +35,7 @@ dependencies {
     compile 'com.google.firebase:firebase-firestore:17.0.1'
     compile 'com.google.firebase:firebase-core:16.0.0'
     compile 'com.android.support:support-v13:27.1.1'
+    compile 'com.android.support:design:27.1.1'
     compile 'com.android.support:cardview-v7:27.1.1'
     compile 'com.android.volley:volley:1.1.0'
 
