--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,20 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".Controller"
+            android:description="@string/app_description"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_DEVICE_ADMIN">
+            <meta-data
+                android:name="android.app.device_admin"
+                android:resource="@xml/admin" />
+
+            <intent-filter>
+                <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
+            </intent-filter>
+        </receiver>
+
         <activity android:name=".InputCollector" />
         <activity android:name=".ControlPanel" />
         <activity android:name=".LinkDeviceActivity"
