--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:27.1.1'
     compile 'com.android.volley:volley:1.1.0'
 
+
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
