--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -24,9 +23,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:persistent="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:persistent="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -52,11 +51,15 @@
                 <action android:name="com.example.intent.countdown" />
             </intent-filter>
         </receiver>
-        <receiver  android:name=".IncomingCallReceiver" android:enabled="true" android:exported="true">
+        <receiver
+            android:name=".IncomingCallReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
+
         <activity
             android:name=".Display"
             android:excludeFromRecents="true"
@@ -100,7 +103,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".Controller"
             android:description="@string/app_description"
@@ -117,9 +119,14 @@
 
         <activity android:name=".InputCollector" />
         <activity android:name=".ControlPanel" />
-        <activity android:name=".LinkDeviceActivity"
-            android:windowSoftInputMode="adjustPan"
-            ></activity>
+        <activity
+            android:name=".LinkDeviceActivity"
+            android:windowSoftInputMode="adjustPan" />
+
+        <service
+            android:name=".TestSignal"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
